# TaggedLocalVideo

./: .dockerignore  .gitignore  Dockerfile  README.cn.md  README.md  config.yaml  docker-compose.yml  main.py  mongo-init.js  pyproject.toml
front-end/video-app-front/: Dockerfile  angular.json  codegen.ts  nginx.conf  package.json
front-end/video-app-front/src/: index.html  styles.css  theme.scss
front-end/video-app-front/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
front-end/video-app-front/src/app/pages/homepage/: homepage.html  homepage.ts
front-end/video-app-front/src/app/pages/management/: management.html  management.ts
front-end/video-app-front/src/app/pages/search/: search.html  search.ts
front-end/video-app-front/src/app/pages/video-player/: video-player.html  video-player.ts
front-end/video-app-front/src/app/route-resolver/: video-player.resolver.ts
front-end/video-app-front/src/app/services/GQL-service/: GQL-service.spec.ts  GQL-service.ts  GQL.service.spec.ts  (+1 more)
front-end/video-app-front/src/environments/: environment.development.ts  environment.ts
src/: app.py  config.py  context.py  errors.py  logger.py
src/db/: setup_mongo.py
src/db/models/: Video_model.py
src/resolvers/: mutation_resolver.py  query_resolver.py  resolver_utils.py  subscription_resolver.py  thumbnail_resolver.py  util.py  video_stream_resolver.py
src/router/: video_router.py
src/schema/: mutation_schema.py  query_schema.py  strawberry_schema.py  subscription_schema.py
src/schema/types/: fileBrowse_type.py  search_type.py  video_type.py
src/schema/types/pydantic_types/: batch_operation_type.py  fileBrowe_type.py  search_type.py  video_type.py
tests/: conftest.py
tests/unit/: test_mutation_resolver.py  test_query_resolver.py
(+53 files in other folders)
