[project]
name = "video-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio==4.12.1",
    "aiofiles==25.1.0",
    "beanie==2.0.1",
    "click==8.3.1",
    "dnspython==2.8.0",
    "fastapi==0.128.0",
    "graphql-core==3.3.0a11",
    "idna==3.11",
    "motor>=3.7.0",
    "pydantic==2.12.5",
    "pydantic_settings==2.12.0",
    "pymongo==4.16.0",
    "starlette==0.50.0",
    "strawberry-graphql==0.289.2",
    "typing-extensions==4.15.0",
    "uvicorn==0.40.0",
    "pyyaml==6.0.3",
    "cachetools>=6.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "mongomock-motor>=0.0.34",
    "freezegun>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit:mark a test as an unit test"
]
